# gemini-code-flake

./: .gitignore  flake.nix  pyproject.toml
scripts/: server.py
